DOCS: disabled currently unused doc import rule

--- a/docs/imports/Makefile.am
+++ b/docs/imports/Makefile.am
@@ -18,17 +18,16 @@ IMPORT_LINKS = 						\
 CHROME_CONF = --no-cache --header "X-Script-Chrome: chrome=off style=beastdocs.css"
 WGET_MIRROR = wget -k -np -nd -nc
 
-import-docs:
-	rm -f ${IMPORT_TARGETS}
-	for fi in ${IMPORT_LINKS} ; do echo " $$fi" ; done	\
-	  | $(WGET_MIRROR) $(CHROME_CONF) --convert-links -i -
-	cat ${srcdir}/style-append.css >> beastdocs.css
-	touch stamp-import-docs
+#import-docs:
+#	rm -f ${IMPORT_TARGETS}
+#	for fi in ${IMPORT_LINKS} ; do echo " $$fi" ; done	\
+#	  | $(WGET_MIRROR) $(CHROME_CONF) --convert-links -i -
+#	cat ${srcdir}/style-append.css >> beastdocs.css
+#	touch stamp-import-docs
 .PHONY: import-docs
+#EXTRA_DIST += stamp-import-docs
 
-EXTRA_DIST += stamp-import-docs
-
-dist-hook:
-	[ ! -e stamp-import-docs ] \
-	|| find stamp-import-docs -mtime -4 | fgrep -q stamp \
-	|| { echo "docs/imports/: Last import is older than 3 days, please run: make import-docs -C docs/imports/" >&2 ; exit 1 ; }
+#dist-hook:
+#	[ ! -e stamp-import-docs ] \
+#	|| find stamp-import-docs -mtime -4 | fgrep -q stamp \
+#	|| { echo "docs/imports/: Last import is older than 3 days, please run: make import-docs -C docs/imports/" >&2 ; exit 1 ; }
