PO: include LINGUAS in EXTRA_DIST

--- a/po/Makefile.am
+++ b/po/Makefile.am
@@ -56,7 +56,7 @@ TRANSLATIONS = $(if ${PO_LINGUAS}, ${PO_LINGUAS}, ${ALL_LINGUAS})
 GMOFILES     = $(patsubst %, %.gmo, $(TRANSLATIONS))
 POFILES      = $(patsubst %, %.po,  $(TRANSLATIONS))
 INTLFIXDIR   = $(top_builddir)/$(ac_aux_dir)
-EXTRA_DIST  += POTIGNORE POTSCAN POTSKIP $(POFILES) messages.pot
+EXTRA_DIST  += LINGUAS POTIGNORE POTSCAN POTSKIP $(POFILES) messages.pot
 EXTRA_DIST  += $(INTLFIXDIR)/intltool-merge  $(INTLFIXDIR)/intlfix-scm.sed
 EXTRA_DIST  += $(INTLFIXDIR)/intlfix-xml.awk $(INTLFIXDIR)/intlfix-las.awk
 CLEANFILES  += $(GMOFILES)
