BUILD: assign rc postfix to versions so mkrelease.sh can parse it

--- a/configure.in
+++ b/configure.in
@@ -37,10 +37,7 @@ BST_RELEASE_CANDIDATE= #rc1
 
 # version number setup
 BSE_VERSION=$BSE_MAJOR_VERSION.$BSE_MINOR_VERSION.$BSE_MICRO_VERSION
-BST_VERSION=$BSE_VERSION # -rcZ to be appended...
-if test -n "$BST_RELEASE_CANDIDATE" ; then
-    BST_VERSION=$BST_VERSION-$BST_RELEASE_CANDIDATE
-fi
+BST_VERSION=$BSE_VERSION${BST_RELEASE_CANDIDATE:+-}$BST_RELEASE_CANDIDATE # M.M.M-rcZ
 BIN_VERSION=$BSE_VERSION    # binary version, used for binaries and paths
 AC_SUBST(BSE_MAJOR_VERSION)
 AC_SUBST(BSE_MINOR_VERSION)
