--- a/configure.in
+++ b/configure.in
@@ -80,6 +80,7 @@ AC_PROG_MAKE_SET
 
 # Disable automatic maintainer mode.
 AM_MAINTAINER_MODE
+m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 
 # declare --enable-* args and collect ac_help strings
 AC_ARG_ENABLE(debug,           [  --enable-debug=no/minimum/yes  turn on debugging],,enable_debug=$debug_default)
