BSE: added zintern snet for sound font preset replay

--- a/bse/zintern/Makefile.am
+++ b/bse/zintern/Makefile.am
@@ -12,6 +12,7 @@ ZFILE_DEFS = $(strip \
 	adsr-wave-2		$(srcdir)/adsr-wave-2.bse	\
 	plain-wave-1		$(srcdir)/plain-wave-1.bse	\
 	plain-wave-2		$(srcdir)/plain-wave-2.bse	\
+	sound-font-snet		$(srcdir)/sound-font-snet.bse	\
 )
 
 gen_sources = xgen-bzc xgen-bzh
