--- a/configure.in
+++ b/configure.in
@@ -354,6 +354,58 @@ AC_DEFUN([AC_BSE_REQUIREMENTS],
     bseuserdatadir='~/beast'
     AC_SUBST(bseuserdatadir)
 ])
+AC_DEFUN([AC_ASOUND_CHECK],
+[
+    saved_cflags="$CFLAGS"
+    saved_cxxflags="$CXXFLAGS"
+    saved_ldflags="$LDFLAGS"
+    dnl # automatically search for libasound under the BSE prefix
+    CFLAGS="$CFLAGS $BSE_CFLAGS"
+    CXXFLAGS="$CFLAGS $BSE_CFLAGS"
+    LDFLAGS="$LDFLAGS $BSE_LIBS"
+    AC_LANG_SAVE
+
+    dnl --- find asoundlib.h ---
+    found_asoundlibh=0
+    AC_CHECK_HEADERS(alsa/asoundlib.h, found_asoundlibh=1)
+    if test $found_asoundlibh = 0 ; then
+	AC_MSG_ERROR([failed to detect asoundlib.h, ALSA not present?])
+    fi
+
+    dnl --- check for ALSA >= 1.0.5 ---
+    AC_MSG_CHECKING([for ALSA with version >= 1.0])
+    found_alsa1=0
+    AC_TRY_COMPILE([#include <alsa/asoundlib.h>],[
+            #if SND_LIB_MAJOR >= 1
+		/* ALSA >= 1.0 present */
+	    #else
+		#error ALSA version <= 1.0
+	    #endif
+    ], [ found_alsa1=1; AC_MSG_RESULT(present); ], [ AC_MSG_RESULT(not present); ])
+    if test $found_alsa1 = 0; then
+	AC_MSG_ERROR([ALSA version 1.0.5 is required to build this package])
+    fi
+
+    dnl --- check for -lasound ---
+    found_libasound=0
+    dnl snd_asoundlib_version() was introduced in ALSA 1.0.5
+    cflags=$CFLAGS
+    ldflags=$LDFLAGS
+    CFLAGS=""
+    LDFLAGS=""
+    AC_CHECK_LIB(asound, snd_asoundlib_version, ALSA_LIBS="-lasound"; found_libasound=1)
+    CFLAGS="$cflags"
+    LDFLAGS="$ldflags"
+    if test $found_libasound = 0; then
+	AC_MSG_ERROR([ALSA version 1.0.5 is required to build this package])
+    fi
+    AC_SUBST(ALSA_LIBS)
+
+    AC_LANG_RESTORE
+    CFLAGS="$saved_cflags"
+    CXXFLAGS="$saved_cxxflags"
+    LDFLAGS="$saved_ldflags"
+])
 AC_DEFUN([AC_BSESCM_REQUIREMENTS],
 [
     BSESCM_CFLAGS="$BSE_CFLAGS"
@@ -576,6 +628,7 @@ AC_BIRNET_REQUIREMENTS
 AC_I18N_REQUIREMENTS
 AC_SFI_REQUIREMENTS
 AC_BSE_REQUIREMENTS
+AC_ASOUND_CHECK
 AC_BSESCM_REQUIREMENTS
 AC_BSE_SNDDEV_CHECK
 AC_GXK_REQUIREMENTS
@@ -615,6 +668,7 @@ bse/tests/Makefile
 plugins/Makefile
 plugins/icons/Makefile
 plugins/freeverb/Makefile
+drivers/Makefile
 shell/Makefile
 beast-gtk/Makefile
 beast-gtk/gxk/Makefile
